--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.public.html.twig' %}
 
 {% block title %}Log in to access at KGB Administration{% endblock %}
 
