feat: ajout de react et modifications necessaire au fonctionne de syfmony encore

--- a/templates/base.public.html.twig
+++ b/templates/base.public.html.twig
@@ -8,5 +8,8 @@
             list-style-type: none;
             padding-left: 0;
         }
+        .cursor:hover{
+            cursor: pointer;
+        }
     </style>
 {% endblock %}
