--- a/templates/mission/show.html.twig
+++ b/templates/mission/show.html.twig
@@ -14,6 +14,10 @@
             </div>
         </section>
 
+
+        <p class="container">
+            <a href="{{ path('home') }}" class="btn btn-primary my-2">Back to missions</a>
+        </p>
         <section class="py-5 text-center container">
             <div class="row">
                 <div class="col">
